Updated the phpMyAdmin script installer to version 4.2.9, 4.1.14.4 and 4.0.10.3, Moodle to 2.7, Wordpress to 4.0, PiWik to 2.6.1, X2CRM to 4.2.1, FengOffice to 2.7.1.1, Node.JS to 0.10.32, PHPList to 3.0.8, and Django to 1.4.15 and 1.7.
If Dovecot 2 or higher has SSL enabled, the certificate for domains with a private IP address will be used for connections to the Dovecot server.
IPv6 addresses in Virtualmin are now supported on all operation systems that Webmin supports them for, rather than just Linux.
Automatic cleanup of messages in all mailboxes and folders can now be setup in Virtualmin, to enforce an email retention policy or save on disk space.
If Postfix and Dovecot are setup to use SSL, they will be configured to use the certificate belonging to virtual servers with their own private IP address for connections to that IP.
---- Changes since 4.11 ----
Updated the Piwik script installer to version 2.8.3, Joomla to 3.3.6 and 2.5.27, Ghost to 0.5.3, Roundcube to 1.0.3, phpMyFAQ to 2.8.15, Zikula to 1.3.9, phpMyAdmin to 4.2.11, 4.1.14.6 and 4.0.10.5, DokuWiki to 2014-09-29a, Dolibarr to 3.6.1, SMF to 2.0.9, TWiki to 6.0.1, SugarCRM to 6.5.18, Coppermine to 1.5.32, X2CRM to 4.3, TikiWiki to 13.0, Drupal to 7.32, PHPList to 3.0.10, OpenCart to 2.0.0.0, eXtplorer to 5.2.5, Django to 1.7.1 and 1.4.16, FengOffice to 2.7.1.6, Node.JS to 0.10.33, and MediaWiki to 1.23.6 and 1.19.21.
On systems running Apache 2.4 and above, VirtualHost blocks are now created with an IP address instead of *.
Moved all S3 and Rackspace Cloud Files settings from the Virtualmin Configuration page to the new Cloud Storage Providers page.
Added support for backups to Google Cloud Storage, once an account is added on the new Cloud Storage Providers page.
---- Changes since 4.12 ----
Updated to Coppermine script installer to version 1.5.34, Drupal to 7.33, and MoinMoin to 1.9.8.
A default shell can now be selected for reseller Unix accounts, independent of the domain owner default shell.