@@ -1471,3 +1471,4 @@ Added support for backups to Google Cloud Storage, once an account is added on t
 ---- Changes since 4.12 ----
 Updated to Coppermine script installer to version 1.5.34, Drupal to 7.33, and MoinMoin to 1.9.8.
 A default shell can now be selected for reseller Unix accounts, independent of the domain owner default shell.
+Added a Change Language link the on left menu for easily switching the UI language.
